--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
     margin: 0 auto;
     text-align: center;
     margin-top: 50px;
+    max-width: 1200px;
+    padding: 15px;
 }
 
 :root{
@@ -32,7 +34,6 @@
 .title{
     display: block;
     position: relative;
-    width: 1200px;
     font-weight: 700;
     text-align: center;
     color: var(--title);
@@ -41,6 +42,5 @@
 .paragraph{
     display: block;
     position: relative;
-    width: 1200px;
 }
 /* END HEADER */
