--- a/style.css
+++ b/style.css
@@ -37,10 +37,12 @@
     font-weight: 700;
     text-align: center;
     color: var(--title);
+    font-size: 1.5em;
 }
 
 .paragraph{
     display: block;
     position: relative;
+    font-size: 1.2em;
 }
 /* END HEADER */
