--- a/style.css
+++ b/style.css
@@ -7,13 +7,6 @@
 
 }
 
-.debug{
-    border: 1px solid black;
-}
-
-.debug2{
-    border: 1px solid rgb(255, 0, 0);
-}
 
 .format-header{
     margin: 0 auto;
@@ -82,6 +75,8 @@
 /* CARDS */
 .card{
     width: 30%;
+    box-shadow: 3px 3px 5px #293149,-3px -3px 5px #293149;
+
 }
 
 .center{
